--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+
 
 h1 {
     padding: 20px;
-    margin-top: ;
+    margin-top: 10px;
     font-size: 50px;
-    font-weight: 40; /* hoi kijk hier*/
+    font-weight: 40;
     text-align: center;
 }
 
@@ -22,20 +18,17 @@ body {
     background-color: black;   
 }
 
-header {
+header ul {
     font-family: fantasy;
     color: blueviolet;
     margin-bottom: 20px;
 }
 
-nav {
-
-}
-
 nav ul {
-    display: flex; /* flexbox is de mo */
+    display: flex; 
     justify-content: center;
     margin-top: 40px;
+    text-decoration: none;
 }
 
 nav ul li {
@@ -43,6 +36,7 @@ nav ul li {
     margin-right: 2em;
     text-align: center;
     justify-content: center;
+    text-decoration: none;
 }
 
 section {
@@ -58,4 +52,8 @@ section {
 footer p {
     justify-content: center;
     text-align: center;
+}
+
+.active {
+    color: yellow;
 }
