--- a/style.css
+++ b/style.css
@@ -7,9 +7,29 @@ h1 {
     font-weight: 40;
     text-align: center;
 }
-
 h2{
     text-align: center;
+}
+
+a {
+    color: blueviolet;
+}
+.active {
+    color: yellow;
+}
+.button:hover {
+    font-size: 1em;
+    padding: 0.1em;
+    border: 2px solid blueviolet;
+    position: sticky;
+}
+.button:active{
+    background-color: yellow;
+    color: blueviolet;
+}
+a:hover {
+    color: yellow;
+    transition: all 250ms ease-in;
 }
 
 body {
@@ -18,6 +38,9 @@ body {
     background-color: black;   
 }
 
+ul {
+    font-size: 30px;
+}
 nav ul {
     font-family: fantasy;
     color: blueviolet;
@@ -26,14 +49,17 @@ nav ul {
     margin-top: 40px;
     margin-bottom: 20px;
     text-decoration: none;
+    border-color:blueviolet;
+    border-radius: 15px;
 }
-
 nav ul li {
     font-size: 35px;
     margin-right: 2em;
     text-align: center;
     justify-content: center;
     text-decoration: none;
+    border-color:blueviolet;
+    border-radius: 15px;
 }
 
 section .homescreen-image {
@@ -48,6 +74,3 @@ footer p {
     text-align: center;
 }
 
-.active {
-    color: yellow;
-}
