Massive info update on about page

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ a {
 .button:active{
     background-color: yellow;
     color: blueviolet;
+    font-weight: 300;
 }
 a:hover {
     color: yellow;
