--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ nav ul li {
     border-radius: 15px;
 }
 
+.homescreen{
+
+}
+
 div .character{
     padding: 3em;
     justify-content: center;
@@ -84,9 +88,8 @@ div {
     padding: 1em;
     max-width: 55%;
     justify-content: center;
-    margin-left: 12.5%;
-    margin-right: 12.5%;
-    background-color:;
+    margin-left: auto;
+    margin-right: auto;
 }
 div .merch {
     justify-content: center;
