--- a/style.css
+++ b/style.css
@@ -52,29 +52,20 @@ ul {
     color: yellow;
 }
 nav ul {
+    justify-content: center;
+}
+nav ul li {
     font-family: fantasy;
     color: blueviolet;
     display: flex; 
-    justify-content: center;
+    font-size: 1em;
+    margin-right: 1.5em;
     margin-top: 40px;
     margin-bottom: 20px;
+    justify-content: center;
     text-decoration: none;
     border-color:blueviolet;
     border-radius: 15px;
-}
-nav ul li {
-    display: flex; 
-    font-size: 35px;
-    margin-right: 1.5em;
-    text-align: center;
-    justify-content: space-between;
-    text-decoration: none;
-    border-color:blueviolet;
-    border-radius: 15px;
-}
-
-.homescreen{
-
 }
 
 div .character{
@@ -89,6 +80,7 @@ div {
     max-width: 55%;
     justify-content: center;
     margin-left: auto;
+    margin-bottom: 2em;
     margin-right: auto;
 }
 div .merch {
@@ -98,6 +90,7 @@ div .merch {
     max-width: 100%;
     max-height: 10%;
     text-align: right;
+    float: left;
 }
 
 .merch{
