--- a/style.css
+++ b/style.css
@@ -62,45 +62,21 @@ nav ul li {
     margin-right: 1.5em;
     margin-top: 40px;
     margin-bottom: 20px;
-    justify-content: center;
     text-decoration: none;
     border-color:blueviolet;
     border-radius: 15px;
 }
 
-div .character{
-    padding: 3em;
-    justify-content: center;
-    max-width: 80%;
-}
-div {
-    border: solid;
-    border-color: blueviolet;
-    padding: 1em;
-    max-width: 55%;
-    justify-content: center;
-    margin-left: auto;
-    margin-bottom: 2em;
-    margin-right: auto;
-}
-div .merch {
-    justify-content: center;
+section {
     display: flex;
-    min-width: 50%;
+    margin-bottom: 5em;
     max-width: 100%;
-    max-height: 10%;
-    text-align: right;
-    float: left;
 }
-
-.merch{
-    justify-content: center;
-    display: flex;
-    min-width: 50%;
-    max-width: 100%;  
-    margin-right: 40%; 
-    padding-right: 3em;
-    overflow-wrap: normal;
+section :first-child { /* selecteerd link/button */
+    
+}
+section :nth-child(3) { /* selecteerd text */
+    background-color: lawngreen;
 }
 
 footer p {
