--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1 {
 }
 h2{
     text-align: center;
+    align-content: center;
 }
 h3{
     font-size: 2em;
@@ -82,7 +83,7 @@ body {
 
 .homescreenimage{
     width: 700px;
-    display: ;
+    display: flex;
     padding-left: 333px;
     justify-content: center;
 }
