--- a/style.css
+++ b/style.css
@@ -84,8 +84,9 @@ body {
 .homescreenimage{
     width: 700px;
     display: flex;
-    padding-left: 333px;
+    flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 section {
@@ -93,10 +94,13 @@ section {
     margin-bottom: 5em;
     max-width: 100%;
     flex-direction: column;
+    justify-content: center;
 }
 section :first-child{
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 section :nth-child(2) {
     font-size: 21px;
